<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CadiBTmon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="output_header">Output from Cadi</string>
    <string name="output_header2"></string>
    <string name="button_connect">Connect</string>
    <string name="connected">Connected!</string>
    <string name="no_bt_device">No BT device!</string>
    <string name="temperature">Temp</string>
    <string name="humidity">rHum</string>
    <string name="plug_states">Plug states</string>
    <string name="temperature_val">00.0</string>
    <string name="humidity_val">00.0</string>
    <string name="plug_states_val">000</string>
    <string name="curtime">Time</string>
    <string name="curtime_val"></string>

    <!--  from BlueTerm -->
    <string name="disconnect">Disconnect device</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting</string>
    <string name="connect">Connect device</string>
    <string name="title_not_connected">not connected</string>
    
    
    <!--  from blu_car --> 	
 	<!-- DeviceListActivity -->
 <string name="scanning">scanning for devices</string>
 <string name="select_device">select a device to connect</string>
 <string name="none_paired">No devices have been paired</string>
 <string name="none_found">No devices found</string>
 <string name="title_paired_devices">Paired Devices</string>
 <string name="title_other_devices">Other Available Devices</string>
 <string name="button_scan">Scan for devices</string>
 
 
 <!-- Device and view settings buttons -->
 
 
 <string name="button_cadi_settings">Device settings</string>
 <string name="button_ctimer_settings">Cyclic timers</string>
 <string name="button_plug_settings">Plugs</string>
 <string name="button_wp_settings">Watering</string>
 <string name="button_stabs_settings">Stabilizers</string>
 <string name="button_datetime_settings">Date and Time</string>
 <string name="button_graph_settings">Graphs</string>
 
 
</resources>
