<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView  android:id="@+id/textview_output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_header" />
    
    <TextView  android:id="@+id/textview_output2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_header2" />
    
    <Button android:id="@+id/button_connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect" />
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
	    <TextView  android:id="@+id/lab_curtime"
	        android:layout_weight="1"
        	android:layout_width="0dp"
       		android:layout_height="wrap_content"
	        android:text="@string/curtime" />
	    
	    <TextView  android:id="@+id/val_curtime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/curtime_val" />
    </LinearLayout>   
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
	    <TextView  android:id="@+id/lab_temperature"
	        android:layout_weight="1"
        	android:layout_width="0dp"
       		android:layout_height="wrap_content"
	        android:text="@string/temperature" />
	    
	    <TextView  android:id="@+id/val_temperature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/temperature_val" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    
	    <TextView  android:id="@+id/lab_humidity"
	        android:layout_weight="1"
        	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/humidity" />
	
	    <TextView  android:id="@+id/val_humidity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/humidity_val" />
	    
	</LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">    
    
	    <TextView  android:id="@+id/lab_plug_states"
	        android:layout_weight="1"
        	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/plug_states" />
	    
	    <TextView  android:id="@+id/val_plug_states"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plug_states_val" />    
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="130dp"
    	android:orientation="horizontal">
	    <com.cadi.graphbuilder.Draw2D android:id="@+id/temp_graph"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	        
     </LinearLayout>
     
        <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    
	    <Button android:id="@+id/button_cadi_settings"
        	android:text="@string/button_cadi_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	<!--     <Button android:id="@+id/button_ctimer_settings"
        	android:text="@string/button_ctimer_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <Button android:id="@+id/button_plug_settings"
        	android:text="@string/button_plug_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    	    
	    <Button android:id="@+id/button_wp_settings"
        	android:text="@string/button_wp_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    	    
	    <Button android:id="@+id/button_stabs_settings"
        	android:text="@string/button_stabs_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <Button android:id="@+id/button_datetime_settings"
        	android:text="@string/button_datetime_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    
	    
	    <Button android:id="@+id/button_graph_settings"
        	android:text="@string/button_graph_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />  -->
	        
     </LinearLayout> 
	    
<!--     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />  -->

</LinearLayout>
